dataset1235/2025-2/1955397009/users/209087680/executions/1686127217_1467685783.log
== SUBMISSION (2025-08-12 13:17:28)
-- CODE: 
print(700)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:17:17)
-- CODE: 
print(20x35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print(20x35)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print(20x35)
           ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
